// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Stats/> componentDidMount() should create a notification (server error) when fetching stats fails 1`] = `
Array [
  Array [
    Object {
      "status": "error",
      "title": "Invalid filters",
    },
  ],
  Array [
    Object {
      "status": "error",
      "title": "Invalid filters",
    },
  ],
]
`;

exports[`<Stats/> componentDidMount() should create a notification (server error) when fetching stats fails: stats should be marked as not loading 1`] = `
Object {
  "fetchingStates": Immutable.Map {
    "tickets-created-per-channel-per-day": false,
    "tickets-created-per-channel": false,
  },
  "stats": Immutable.Map {},
}
`;

exports[`<Stats/> componentDidMount() should create a notification (unknown error) when fetching stats fails 1`] = `
Array [
  Array [
    Object {
      "status": "error",
      "title": "Failed to get statistics. Please retry in a few seconds.",
    },
  ],
  Array [
    Object {
      "status": "error",
      "title": "Failed to get statistics. Please retry in a few seconds.",
    },
  ],
]
`;

exports[`<Stats/> componentDidMount() should create a notification (unknown error) when fetching stats fails: stats should be marked as not loading 1`] = `
Object {
  "fetchingStates": Immutable.Map {
    "tickets-created-per-channel-per-day": false,
    "tickets-created-per-channel": false,
  },
  "stats": Immutable.Map {},
}
`;

exports[`<Stats/> componentDidMount() should fetch stats and populate the state: should contain data of stats and be marked as not loading 1`] = `
Object {
  "fetchingStates": Immutable.Map {
    "tickets-created-per-channel-per-day": false,
    "tickets-created-per-channel": false,
  },
  "stats": Immutable.Map {
    "tickets-created-per-channel-per-day": Immutable.Map {
      "meta": Immutable.Map {
        "previous_end_datetime": "2019-05-25T00:00:00-05:00",
        "previous_start_datetime": "2019-05-18T00:00:01-05:00",
        "end_datetime": "2019-05-31T23:59:59-05:00",
        "start_datetime": "2019-05-25T00:00:00-05:00",
      },
      "label": "First response time (percentiles)",
      "legend": Immutable.Map {
        "axes": Immutable.Map {
          "x": "",
          "y": "First response time",
        },
      },
      "data": Immutable.Map {
        "axes": Immutable.Map {
          "x": Immutable.List [
            1558760400,
            1558846800,
            1558933200,
            1559019600,
            1559106000,
            1559192400,
            1559278800,
          ],
          "y": Immutable.List [],
        },
        "lines": Immutable.List [
          Immutable.Map {
            "name": "50%",
            "data": Immutable.List [
              0,
              0,
              0,
              0,
              1563,
              44772,
              0,
            ],
          },
          Immutable.Map {
            "name": "90%",
            "data": Immutable.List [
              0,
              0,
              0,
              0,
              1563,
              80567,
              0,
            ],
          },
        ],
      },
    },
    "tickets-created-per-channel": Immutable.Map {
      "meta": Immutable.Map {
        "previous_end_datetime": "2019-05-25T00:00:00-05:00",
        "previous_start_datetime": "2019-05-18T00:00:01-05:00",
        "end_datetime": "2019-05-31T23:59:59-05:00",
        "start_datetime": "2019-05-25T00:00:00-05:00",
      },
      "label": "First response time (percentiles)",
      "legend": Immutable.Map {
        "axes": Immutable.Map {
          "x": "",
          "y": "First response time",
        },
      },
      "data": Immutable.Map {
        "axes": Immutable.Map {
          "x": Immutable.List [
            1558760400,
            1558846800,
            1558933200,
            1559019600,
            1559106000,
            1559192400,
            1559278800,
          ],
          "y": Immutable.List [],
        },
        "lines": Immutable.List [
          Immutable.Map {
            "name": "50%",
            "data": Immutable.List [
              0,
              0,
              0,
              0,
              1563,
              44772,
              0,
            ],
          },
          Immutable.Map {
            "name": "90%",
            "data": Immutable.List [
              0,
              0,
              0,
              0,
              1563,
              80567,
              0,
            ],
          },
        ],
      },
    },
  },
}
`;

exports[`<Stats/> componentDidMount() should fetch stats and populate the state: should contain loading stats 1`] = `
Object {
  "fetchingStates": Immutable.Map {
    "tickets-created-per-channel-per-day": true,
    "tickets-created-per-channel": true,
  },
  "stats": Immutable.Map {},
}
`;

exports[`<Stats/> render() should not render stats because there is no stat to render and it's not fetching stats 1`] = `
<div
  className="container-fluid"
  style={
    Object {
      "padding": 0,
    }
  }
/>
`;

exports[`<Stats/> render() should render stats 1`] = `
<div
  className="container-fluid"
  style={
    Object {
      "padding": 0,
    }
  }
/>
`;

exports[`<Stats/> render() should render stats as loading 1`] = `
<div
  className="container-fluid"
  style={
    Object {
      "padding": 0,
    }
  }
>
  <div
    key="0"
    style={
      Object {
        "padding": "30px",
      }
    }
  >
    <Connect(Stat)
      config={
        Immutable.Map {
          "helpText": "Number of tickets created per channel per day",
          "style": "bar",
          "downloadable": true,
          "lines": Immutable.Map {
            "facebook": Immutable.Map {
              "label": "Facebook",
              "color": "#4872db",
            },
            "aircall": Immutable.Map {
              "label": "Aircall",
              "color": "#34ba28",
            },
            "facebook-messenger": Immutable.Map {
              "label": "Facebook Messenger",
              "color": "#1787fb",
            },
            "phone": Immutable.Map {
              "label": "Phone",
              "color": "#ffe03f",
            },
            "twitter": Immutable.Map {
              "label": "Twitter",
              "color": "#00aced",
            },
            "chat": Immutable.Map {
              "label": "Chat",
              "color": "#ffb584",
            },
            "sms": Immutable.Map {
              "label": "Sms",
              "color": "#69c473",
            },
            "api": Immutable.Map {
              "label": "Gorgias API",
              "color": "#e88850",
            },
            "email": Immutable.Map {
              "label": "Email",
              "color": "#ff5eab",
            },
          },
          "options": [Function],
        }
      }
      filters={
        Immutable.Map {
          "period": Immutable.Map {
            "start_datetime": "2019-03-09",
            "end_datetime": "2019-03-10",
          },
        }
      }
      loading={true}
      name="tickets-created-per-channel-per-day"
    />
  </div>
  <div
    key="1"
    style={
      Object {
        "padding": "30px",
      }
    }
  >
    <Connect(Stat)
      config={
        Immutable.Map {
          "helpText": "Number of tickets created per channel",
          "style": "table",
          "downloadable": true,
        }
      }
      filters={
        Immutable.Map {
          "period": Immutable.Map {
            "start_datetime": "2019-03-09",
            "end_datetime": "2019-03-10",
          },
        }
      }
      loading={true}
      name="tickets-created-per-channel"
    />
  </div>
</div>
`;
